# deployment-studio

./: .gitignore  AGENTS.md  PLAN.md  README.md
.github/workflows/: ci.yml
design/: FUTURE-dataflows.md  REVIEW-UI.md  REVIEW.md  app.js  index.html  styles.css
design/mock-app/: README.md  app.js  component-editor.html  definition-map.html  fleet.html  hierarchy-config.html  index.html  plan-drift.html  release-gate.html  render-review.html  settings.html  styles.css
design/mock-app/data/: dallas.js  northwind.js
design/mock-app/styles/: mock.css
fixtures/dallas/: TRACEABILITY.md  definition.yaml  oracle-map.json
fixtures/dallas/releases/v1/: evidence.json  manifest.json
fixtures/dallas/releases/v1/rendered/: plan.json
kernel/: Cargo.toml  README.md
kernel/src/: context.rs  lib.rs  main.rs  merge.rs  model.rs  oracle.rs  release.rs  render.rs  validate.rs
kernel/tests/: dallas_oracle.rs  release.rs
schema/: DEFINITION.md  deployment-definition.schema.json  validate.py
