[package]
name = "edgecommons-deploy"
version = "0.1.0"
edition = "2021"
description = "Deployment Studio kernel: DeploymentDefinition model, validator, and HOST renderer (slice 1)"
license = "Apache-2.0"

[[bin]]
name = "ec-deploy"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
indexmap = { version = "2", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
serde_yaml = "0.9"
sha2 = "0.11.0"
